<resources>
    <!-- Name for the application -->
    <string name="app_name">Inventory App</string>

    <!-- Labels for overflow menu -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <!-- Text Editor hints -->
    <string name="product_name_hint">Product Name</string>
    <string name="price_hint">Price</string>
    <string name="quantity_hint">Quantity</string>
    <string name="supplier_name_hint">Supplier Name</string>
    <string name="supplier_phone_hint">Supplier Phone Number</string>

</resources>
